Adding Test in core back in and creating good JavaDOC
Current status next class to look at is  DefaultResultFormatter